codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_menu_summary_snapshot_includes_limit_bars.snap
---
source: tui/src/status/tests.rs
expression: rendered
---
 UI:             tui
 Model:          gpt-5.1-codex-max (reasoning high, summaries auto)
 Directory:      /workspace/tests
 Approval:       on-request
 Sandbox:        read-only
 Auto-compact:   disabled
 Thoughts:       shown
 Token usage:    1.9K total  (1K input + 900 output)
 Context:                     [████████████████████] 99% left (2.25K used / 272K
 Limits:         5h limit     [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)
                 Weekly limit [███████████░░░░░░░░░] 55% left (resets 03:24)
