codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  ⚡xtreme-Codex (v0.1.0)                                           │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  UI:               tui                                             │
│  Power:            ⚡⚡⚡                                          │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries de │
│  Directory: [[workspace]]                                          │
│  CODEX_HOME: [[codex_home]]                                          │
│  Approval:         on-request                                      │
│  Sandbox:          read-only                                       │
│  Agents.md:        <none>                                          │
│  Auto-compact:     disabled                                        │
│  Thoughts:         hidden                                          │
│                                                                    │
│  Token usage:      1.9K total  (1K input + 900 output)             │
│  Context window:   [████████████████████] 99% left (2.25K used / 2 │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
